# WebView

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md  resources.md
.github/workflows/: linux-ci.yml
assets/engine/shaders/border_pipeline/: BorderPipeline.frag.hlsl  BorderPipeline.frag.spv  BorderPipeline.vert.hlsl  BorderPipeline.vert.spv
assets/engine/shaders/image_pipeline/: ImagePipeline.frag.hlsl  ImagePipeline.frag.spv  ImagePipeline.vert.hlsl  ImagePipeline.vert.spv
assets/engine/shaders/line_pipeline/: LinePipeline.vert.hlsl
assets/engine/shaders/solid_fill_pipeline/: SolidFillPipeline.frag.hlsl  SolidFillPipeline.frag.spv  SolidFillPipeline.vert.hlsl  (+1 more)
assets/web_view/: Test.css  Test.html
engine/bedrock/: BedrockCommon.hpp  BedrockFile.hpp  BedrockMemory.hpp  BedrockPath.cpp  BedrockPath.hpp
engine/libs/libconfig/: CMakeLists.txt  LibConfig.cpp
engine/render_system/: BufferTracker.cpp  BufferTracker.hpp  CMakeLists.txt  LogicalDevice.cpp  LogicalDevice.hpp  RenderBackend.cpp  RenderBackend.hpp
engine/render_system/pipeline/: BorderPipeline.cpp  BorderPipeline.hpp  IShadingPipeline.hpp  ImagePipeline.cpp  ImagePipeline.hpp  LinePipeline.cpp  LinePipeline.hpp  SolidFillPipeline.cpp  SolidFillPipeline.hpp  TextOverlayPipeline.cpp  TextOverlayPipeline.hpp
engine/render_system/utils/: BorderRenderer.cpp  BorderRenderer.hpp  ConsolasFontRenderer.cpp  ConsolasFontRenderer.hpp  CustomFontRenderer.cpp  CustomFontRenderer.hpp  ImageRenderer.cpp  ImageRenderer.hpp  LineRenderer.cpp  SolidFillRenderer.cpp  SolidFillRenderer.hpp
executables/: CMakeLists.txt  WebViewContainer.cpp  WebViewContainer.hpp  WebViewDemoMain.cpp
executables/font_renderer/: CMakeLists.txt  FontRendererApp.cpp  FontRendererApp.hpp  FontRendererMain.cpp
executables/web_view/: CMakeLists.txt  WebViewApp.cpp  WebViewApp.hpp  WebViewContainer.cpp  WebViewContainer.hpp  WebViewMain.cpp
shared/: BinaryReader.cpp  BinaryReader.hpp  CMakeLists.txt  FontAtlasPipeline.cpp  FontAtlasPipeline.hpp  FontData.cpp  FontData.hpp  FontParser.cpp  FontParser.hpp  WebViewContainer.cpp  WebViewContainer.hpp
(+5 files in other folders)
